[package]
name = "streameme_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-web = "4.11.0"
derive = "1.0.0"
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
tempfile = "3.22.0"
thiserror = "2.0.16"
